package Game.EnsemblePokemon;

import Game.Elements.*;
import Game.Pokemon;

import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;
import java.util.Random;

public class ListePokemon {


    static final List<String> listeNomsPokemon = new ArrayList<>(Arrays.asList(
            "Bulbizarre", "Herbizarre", "Florizarre", "Salamèche", "Reptincel", "Dracaufeu",
            "Carapuce", "Carabaffe", "Tortank", "Chenipan", "Chrysacier", "Papilusion",
            "Aspicot", "Coconfort", "Dardargnan", "Roucool", "Roucoups", "Roucarnage",
            "Rattata", "Rattatac", "Piafabec", "Rapasdepic", "Abo", "Arbok", "Pikachu",
            "Raichu", "Sabelette", "Sablaireau", "Nidoran♀", "Nidorina", "Nidoqueen",
            "Nidoran♂", "Nidorino", "Nidoking", "Mélofée", "Mélodelfe", "Goupix",
            "Feunard", "Rondoudou", "Grodoudou", "Nosferapti"));

    static Pokemon genererPokemon() {
        Random randomNumbers = new Random();

        // Choisir aléatoirement un nom de Pokémon dans la liste
        int indexNomPokemon = randomNumbers.nextInt(listeNomsPokemon.size());
        String nomPokemon = listeNomsPokemon.get(indexNomPokemon);

        // Enlever le nom de Pokémon sélectionné de la liste pour éviter qu'il reviennent 2 fois
        listeNomsPokemon.remove(indexNomPokemon);

        // Générer aléatoirement les points de vie (entre 100 et 200)
        int vie = randomNumbers.nextInt(11) * 10 + 100;

        // Générer aléatoirement la valeur d'attaque (entre 10 et 40)
        int attaque = randomNumbers.nextInt(4) * 10 + 10;

        int ele = randomNumbers.nextInt(4)+1;
        Element elements;
        if(ele == 1){ elements = new Feu();}
        else if (ele == 2) { elements = new Eau();}
        else if (ele == 3) {elements = new Terre();}
        else if (ele == 4) {elements = new Air();}
        else {elements = null;}

        // Créer et retourner un nouveau Pokémon avec les valeurs générées
        return new Pokemon(nomPokemon, elements, vie, attaque);
    }



}


